2005-12-10 Perry
 PATCH: [ 1371384 ] Move Expat maps into WinMerge src
  Plugins\src_VCPP\DisplayXMLFiles: DisplayXMLFiles.dsp
  Src\ExpatMapLib added
  Many files moved from DisplayXMLFiles to new ExpatMapLib

2005-12-09 Perry
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  Remainder of dialogs
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 BUG: [ 1376825 ] infinite loop bug in byte diffs
  Src: stringdiffs.cpp
 PATCH: [ 1188787 ] New Chinese translation rc file (from PATCH 1183476)
  A few string resources
  Src/Languages/ChineseTraditional: MergeChineseTraditional.rc
 PATCH: [ 1249007 ] Short size column
  Src: DirViewColItems.cpp locality.cpp locality.h Merge.rc resource.h
 PATCH: [ 1377362 ] Fix coretools to MakeResDll compiles
 BUG: [ 1377361 ] MakeResDll broken b/c coretools broken
  Src/Common: coretools.cpp
   
2005-12-08 Perry
 PATCH: [1374728 ] Fix filter dialog delete
  Src: FileFilterMgr.cpp

2005-12-08 Kimmo
 PATCH: [ 1374782 ] fix for bug 1300957 Crash on save 'unique' file comparison
  Submitted by Oliver Mellet, some additional comment improvements by me.
  Src: DirDoc.cpp
 Takashi is now developer, Olivier Mellet submitted a patch
  Docs/Users: Contributors.txt

2005-12-08 Perry
 PATCH: [ 1376457 ] Need clarification in platform test in ShellExtension
  ShellExtension: ShellExtension.cpp

2005-12-08 Takashi
 fix two-line-end-markers bug that was reported in:
  "PATCH: [ 1372716 ] patch for RFE:[ 922992 ] Word Wrap/split long lines" 
 Src: stringdiffs.cpp

2005-12-08 Takashi
 PATCH: [ 1372716 ] patch for RFE:[ 922992 ] Word Wrap/split long lines 
  Src: Merge.rc MergeDoc.cpp MergeEditView.cpp MergeEditView.h OptionsDef.h
   OptionsInit.cpp resource.h 
  Src/editlib: ccrystaltextview.cpp ccrystaltextview.h ccrystaltextview2.cpp
   crystalparser.cpp editcmd.h 
  Src/Languages: *.rc resource.h

2005-12-07 Perry
 PATCH [ 1374931 ] Bugfixes & upload binary for RCLocalizationHelper