@@ -537,14 +537,14 @@ static void StoreDiffResult(DIFFITEM &di, CDiffContext * pCtxt,
 
 		if (!di.isSideLeft())
 		{
-			di.right.unicoding = pDiffFileData->m_sFilepath[1].unicoding;
-			di.right.codepage = pDiffFileData->m_sFilepath[1].codepage;
+			di.right.unicoding = pDiffFileData->m_FileLocation[1].unicoding;
+			di.right.codepage = pDiffFileData->m_FileLocation[1].codepage;
 		}
 		
 		if (!di.isSideRight())
 		{
-			di.left.unicoding = pDiffFileData->m_sFilepath[0].unicoding;
-			di.left.codepage = pDiffFileData->m_sFilepath[0].codepage;
+			di.left.unicoding = pDiffFileData->m_FileLocation[0].unicoding;
+			di.left.codepage = pDiffFileData->m_FileLocation[0].codepage;
 		}
 	}
 
